# mkdocs_docwriter

./: mkdocs.dev.yml  mkdocs.dev.yml.bkp  untitled.ui
default/: mkdocs.dev.yml  mkdocs.yml
doc/Abacaxi/: index.md
doc/Abacaxi/Teste/: index.md
doc/Abacaxi/Teste/Abc/: index.md
doc/Abacaxi/Teste/Abc/teste1/: index.md
doc/Abacaxi/Teste/Abc/teste1/teste2/: index.md
doc/Abacaxi/Teste/Abc/teste1/teste2/teste3/: index.md
doc/Abacaxi/Teste/Abc/teste1/teste2/teste3/teste4/: index.md
doc/Aplicações/: index.md
doc/Aplicações/Teste/Brincadeira/: teste.md
docwriter/: .env  main.spec  pyproject.toml
docwriter/src/docwriter/: config.py  core copy.py  core.py  exceptions.py  main.py  navtree.py  ui.py  ui_mainwindow.py  utils.py  yaml_io.py
